# wlsolver

./: .editorconfig  .gitignore  Pipfile  README.html  README.md  README.rst  pyproject.toml
src/wlsolver/: __about__.py  __init__.py  __main__.py
words/: README.md  wlsolver_dictionary.txt  words  wordtest.txt
