[project]
name = 'wlsolver'
description = 'A cli tool to solve a word list puzzle.'
readme = 'README.md'
license = {file = 'LICENSE'}
# Support Python 3.11+.
requires-python = '>=3.11'
dynamic = [
  'version',
]
dependencies = [
  'rich>=13.6.0',
  'typer>=0.9.0',
]


[project.optional-dependencies]
dev = [
  'ruff',
]
tests = [
  'pytest>=7.4.2',
]


[project.urls]
Home = "https://github.com/bwprog"

[tool.ruff]
# Increase the maximum line length to 100 characters.
line-length = 120
indent-width = 4
# Exclude directories
exclude = [
  ".zzz",
  ".pytest_cache",
  ".ruff_cache",
  ".vscode",
  "docs",
  "research",
  "NASPA",
]
# enable enforcement rules at Python 3.11 level
target-version = "py311"
# show ruff performed fixes
show-fixes = true

[tool.ruff.lint]
# enforced rules
select = [
  "A",      # flake8-builtins
  "AIR",    # Airflow
  "ANN",    # flake8-annotations
  "ARG",    # flake8-unused-arguyments
  "ASYNC",  # flake8-ASYNC
  "B",      # flake8-bugbear
  "BLE",    # flake8-blund-except
  "C4",     # flake8-comprehensions
  "C90",    # mccabe complexity
  "COM",    # flake8-commas
  "D",      # pydocstyle
  "D",      # flake8-django
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle - Error
  "EM",     # flake8-errmsg
  "ERA",    # eradicate
  "EXE",    # flake8-executable
  "F",      # pyflakes
  "FA",     # flake8-future-annotations
  "FBT",    # flake8-boolean-trap
  "FIX",    # flake8-fixme
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INP",    # flake8-no-pep420
  "INT",    # flake8-gettext
  "ISC",    # flake8-implicit-str-concat
  "FLY",    # flynt
  "G",      # flake8-logging-format
  "LOG",    # flake8-logging
  "N",      # pep8-naming
  "NPY",    # NumPy-specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # ruff-specific rules
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TCH",    # flake8-type-checking
  "TD",     # flake8-todos
  "TID",    # flake8-tidy-imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # pycodestyle - Warning
  "YTT",    # flake8-2020
]
# ignored rules
ignore = [
  "ARG001",   # unused arguments - Typer args are of this type
  "FBT001",   # boolean default positional argument -- seems wonky
  "FBT002",   # boolean default positional argument -- seems wonky
  # "PLR0911",  # pylint - too many rerurn statements
  # "PLR0913",  # pylint - too many arguments to function call
  # "PLR2004",  # pylint - don't use magic variable, define as CONSTANT and use that
  "PLW0603",  # pylint - don"t use global to update global variables
  "RET505",   # flake8-return - else after return -- too dumb to understand multiple elif
  "TD003",    # todos - forced github link to reported bug
  "UP007",    # pyupgrade - Typer doesn't support | unions yet
]
# enable preview rules
preview = true

# ignore missing docstring in empty __init__.py
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 21

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "numpy"

[tool.ruff.lint.pylint]
# PLR0911 - affects match-case simple returns
max-returns = 12
# PLR0915 - affects adding log statements throughout
max-statements = 75
# PLR0913 - typer uses function args, need to bump this way up
max-args = 30
# PLR0912 - max number of branches for function or method
max-branches = 21

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
